net/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: by-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: demo1
            port:
              number: 8080
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: demo2
            port:
              number: 8080
      
      - path: /v3
        pathType: Prefix
        backend:
          service:
            name: demo3
            port:
              number: 8080
